--- a/index.html
+++ b/index.html
@@ -35,5 +35,23 @@
           </div>
         </div> 
       </header>
+        <section class="bg-gold sans-serif">
+          <div class="mw9 center pa4 pt5-ns ph7-l">
+            <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+              <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+                Wilmington Food Swap
+              </span>
+            </h3>
+            <h4 class="f3 fw1 georgia i">Connecting people who love homemade, homegrow & foraged foods</h4>
+            <h5 class="f6 ttu tracked black-80">Wilmington, DE, USA</h5>
+          </div>
+        </section>
+        <div class="pa4 ph7-l georgia mw9-l center">
+            <h2>WELCOME SWAPPERS!</h2>
+            <p class="f5 f3-ns lh-copy measure georgia">
+                    Bring your homemade or homegrown items for a barter style swap! Meet fellow foodies, bakers, gardeners, farmers and local like-minded people. Bring an old friend or come and make new friends.
+                    Serving the Wilmington, Delaware area.
+            </p>
+        </div>
 </body>
 </html>
