Removed picture header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,51 +8,53 @@
     <link rel="stylesheet" href="assets/css/tachyons.min.css">
     <title>Wilmington Food Swap</title>
 </head>
+
 <body>
-    <header class="sans-serif">
-        <div class="cover bg-left bg-center-l" style="background-image: url(assets/img/header.jpeg)">
-          <div class="bg-black-80 pb5 pb6-m pb7-l">
-            <nav class="dt w-100 mw8 center"> 
-              <div class="dtc w2 v-mid pa3">
-                <a href="/" class="dib w2 h2 pa1 ba b--white-90 grow-large border-box">
-                  <svg class="link white-90 hover-white" data-icon="skull" viewBox="0 0 32 32" style="fill:currentcolor"><title>skull icon</title><path d="M16 0 C6 0 2 4 2 14 L2 22 L6 24 L6 30 L26 30 L26 24 L30 22 L30 14 C30 4 26 0 16 0 M9 12 A4.5 4.5 0 0 1 9 21 A4.5 4.5 0 0 1 9 12 M23 12 A4.5 4.5 0 0 1 23 21 A4.5 4.5 0 0 1 23 12"></path></svg>
-                </a>
-              </div>
-              <div class="dtc v-mid tr pa3">
-                <a class="f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/" >How it Works</a> 
-                <!-- <a class="f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/" >Pricing</a>  -->
-                <a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph3" href="/" >About</a> 
-                <!-- <a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph3" href="/" >Careers</a>  -->
-                <!-- <a class="f6 fw4 hover-white no-underline white-70 dib ml2 pv2 ph3 ba" href="/" >Sign Up</a>  -->
-              </div>
-            </nav> 
-            <div class="tc-l mt4 mt5-m mt6-l ph3">
-              <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Wilmington Food Swap</h1>
-              <h2 class="fw1 f3 white-80 mt3 mb4">Connecting people who love homemade, homegrow & foraged foods</h2>
-              <a class="f6 no-underline grow dib v-mid bg-blue white ba b--blue ph3 pv2 mb3" href="/">Get in contact</a>
-              <span class="dib v-mid ph3 white-70 mb3">or</span>
-              <a class="f6 no-underline grow dib v-mid white ba b--white ph3 pv2 mb3" href="">Sign up</a>
-            </div>
-          </div>
-        </div> 
-      </header>
-        <section class="bg-gold sans-serif">
-          <div class="mw9 center pa4 pt5-ns ph7-l">
+    <nav class="db dt-l w-100 border-box pa3 ph5-l">
+        <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+          <img src="http://tachyons.io/img/logo.jpg" class="dib w2 h2 br-100" alt="Site Name">
+        </a>
+        <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
+          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
+          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a>
+          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Blog">Blog</a>
+          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Press">Press</a>
+          <a class="link dim dark-gray f6 f5-l dib" href="#" title="Contact">Contact</a>
+        </div>
+      </nav>
+    <section class="bg-gold sans-serif">
+        <div class="mw9 center pa4 pt5-ns ph7-l">
             <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
-              <span class="bg-black-90 lh-copy white pa1 tracked-tight">
-                Wilmington Food Swap
-              </span>
+                <span class="ttu bg-black-90 lh-copy white pa1 tracked-tight">
+                    Wilmington Food Swap
+                </span>
             </h3>
             <h4 class="f3 fw1 georgia i">Connecting people who love homemade, homegrow & foraged foods</h4>
             <h5 class="f6 ttu tracked black-80">Wilmington, DE, USA</h5>
-          </div>
-        </section>
-        <div class="pa4 ph7-l georgia mw9-l center">
-            <h2>WELCOME SWAPPERS!</h2>
-            <p class="f5 f3-ns lh-copy measure georgia">
-                    Bring your homemade or homegrown items for a barter style swap! Meet fellow foodies, bakers, gardeners, farmers and local like-minded people. Bring an old friend or come and make new friends.
-                    Serving the Wilmington, Delaware area.
-            </p>
         </div>
+    </section>
+    <div class="pa4 ph7-l georgia mw9-l center">
+        <h2 class="ttu f3">Welcome Swappers</h2>
+        <p class="f5 f3-ns lh-copy measure georgia">
+            Bring your homemade or homegrown items for a barter style swap! Meet fellow foodies, bakers, gardeners, farmers and local
+            like-minded people. Bring an old friend or come and make new friends. Serving the Wilmington, Delaware area.
+        </p>
+    </div>
+
+    <div class="mw9 center ph3-ns">
+        <div class="cf ph2-ns">
+            <div class="fl w-100 w-third-ns pa2">
+                <div class="outline bg-white pv4">sdfsdf</div>
+            </div>
+            <div class="fl w-100 w-third-ns pa2">
+                <div class="outline bg-white pv4">sdfsdf</div>
+            </div>
+            <div class="fl w-100 w-third-ns pa2">
+                <div class="outline bg-white pv4">sdff</div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
