Change brand icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="db dt-l w-100 border-box pa3 ph5-l">
         <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-          <img src="http://tachyons.io/img/logo.jpg" class="dib w2 h2 br-100" alt="Site Name">
+          <img src="assets/img/brand.svg" class="dib w2 h2 br-100" alt="Site Name">
         </a>
         <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
           <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
@@ -29,7 +29,7 @@
                     Wilmington Food Swap
                 </span>
             </h3>
-            <h4 class="f3 fw1 georgia i">Connecting people who love homemade, homegrow & foraged foods</h4>
+            <h4 class="f3 fw1 georgia i">Connecting people who love homemade, homegrown & foraged foods</h4>
             <h5 class="f6 ttu tracked black-80">Wilmington, DE, USA</h5>
         </div>
     </section>
