Add additional sections

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <nav class="db dt-l w-100 border-box pa3 ph5-l">
         <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-          <img src="assets/img/brand.svg" class="dib w2 h2 br-100" alt="Site Name">
+            <img src="assets/img/brand.svg" class="dib w2 h2 br-100" alt="Site Name">
         </a>
         <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
-          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a>
-          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Blog">Blog</a>
-          <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Press">Press</a>
-          <a class="link dim dark-gray f6 f5-l dib" href="#" title="Contact">Contact</a>
+            <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
+            <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a>
+            <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Blog">Blog</a>
+            <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Press">Press</a>
+            <a class="link dim dark-gray f6 f5-l dib" href="#" title="Contact">Contact</a>
         </div>
-      </nav>
+    </nav>
     <section class="bg-gold sans-serif">
         <div class="mw9 center pa4 pt5-ns ph7-l">
             <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
@@ -41,19 +41,64 @@
         </p>
     </div>
 
-    <div class="mw9 center ph3-ns">
-        <div class="cf ph2-ns">
-            <div class="fl w-100 w-third-ns pa2">
-                <div class="outline bg-white pv4">sdfsdf</div>
+    <section class="ph3 ph5-ns pv5">
+        <article class="mw8 center br2 ba b--yellow bg-gold">
+            <div class="dt-ns dt--fixed-ns w-100">
+                <div class="pa3 pa4-ns dtc-ns v-mid">
+                    <div>
+                        <h2 class="fw4 mt0 mb3">This is a promo title </h2>
+                        <p class="black-70 measure lh-copy mv0">
+                            This is suporting copy for the wonderful promo catchphrase that is going to be used.
+                        </p>
+                    </div>
+                </div>
+                <div class="pa3 pa4-ns dtc-ns v-mid">
+                    <a href="#" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Sign up for free</a>
+                </div>
             </div>
-            <div class="fl w-100 w-third-ns pa2">
-                <div class="outline bg-white pv4">sdfsdf</div>
-            </div>
-            <div class="fl w-100 w-third-ns pa2">
-                <div class="outline bg-white pv4">sdff</div>
-            </div>
+        </article>
+    </section>
+    <section class="fl w-100 cf pa3 mw9 center">
+        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+            <h3 class="f3 ttu">Who are we?</h3>
+            <p class="f6 lh-copy measure">
+                Wilmington Food Swap is a community of local foodies who share a passion for homemade, homegrown, or foraged foods.
+            </p>
+            <p class="f6 lh-copy measure">
+                Starting Spring 2019, we will meet quarterly to swap and sample each others kitchen creations. While this event is open to
+                anyone, registration in advance is required to attend.
+            </p>
+            <p class="f6 lh-copy measure">
+                For information about how you can help, see our
+                <a href="#">Support Us</a> page.
+            </p>
         </div>
-    </div>
+        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+            <h3 class="f3 ttu">What is a food swap?</h3>
+            <p class="f6 lh-copy measure">
+                A food swap is a quarterly event where you and fellow foodies meet to exchange and share their homemade, homegrown, or foraged
+                foods with each other. Food swaps are a great way to change up the homemade and homegrown foods in your pantry,
+                while getting to meet local foodies like yourself in the process.
+            </p>
+            <p class="f6 lh-copy measure">
+                Take a minute and review our
+                <a href="#">Tips For Successful Swapping</a>
+            </p>
+        </div>
+        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+            <h3 class="f3 ttu">What kinds of food should I bring?</h3>
+            <p class="f6 lh-copy measure">
+                In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from your garden. Jams, jellies
+                and marmalade are frequently swapped at these events. Get creative with pasta, granola, kombucha, or condiments.
+                Candies and cookies are great as well, but be mindful of portion size. Someone who made a pint of jam probably
+                would not want to make a swap for just one or two cookies. Whatever you decide to bring, make sure that it’s
+                packaged in bags or jars and properly labeled.
+            </p>
+            <p class="f6 lh-copy measure">
+                It's recommended you bring five to ten items you wish to swap, as well as samples or a potluck dish to share with the group.
+            </p>
+        </div>
+    </section>
 
 </body>
 
