--- a/index.html
+++ b/index.html
@@ -41,47 +41,80 @@
         </p>
     </div>
 
-    <section class="fl w-100 cf pa3 mw9 center">
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-            <h3 class="f3 ttu">Who are we?</h3>
-            <p class="f6 lh-copy measure">
-                Wilmington Food Swap is a community of local foodies who share a passion for homemade, homegrown, or foraged foods.
-            </p>
-            <p class="f6 lh-copy measure">
-                Starting Spring 2019, we will meet quarterly to swap and sample each others kitchen creations. While this event is open to
-                anyone, registration in advance is required to attend.
-            </p>
-            <p class="f6 lh-copy measure">
-                For information about how you can help, see our
-                <a href="#">Support Us</a> page.
-            </p>
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-            <h3 class="f3 ttu">What is a food swap?</h3>
-            <p class="f6 lh-copy measure">
-                A food swap is a quarterly event where you and fellow foodies meet to exchange and share their homemade, homegrown, or foraged
-                foods with each other. Food swaps are a great way to change up the homemade and homegrown foods in your pantry,
-                while getting to meet local foodies like yourself in the process.
-            </p>
-            <p class="f6 lh-copy measure">
-                Take a minute and review our
-                <a href="#">Tips For Successful Swapping</a>
-            </p>
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-            <h3 class="f3 ttu">What kinds of food should I bring?</h3>
-            <p class="f6 lh-copy measure">
-                In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from your garden. Jams, jellies
-                and marmalade are frequently swapped at these events. Get creative with pasta, granola, kombucha, or condiments.
-                Candies and cookies are great as well, but be mindful of portion size. Someone who made a pint of jam probably
-                would not want to make a swap for just one or two cookies. Whatever you decide to bring, make sure that it’s
-                packaged in bags or jars and properly labeled.
-            </p>
-            <p class="f6 lh-copy measure">
-                It's recommended you bring five to ten items you wish to swap, as well as samples or a potluck dish to share with the group.
-            </p>
+    <section class="mw9 center ph3-ns">
+        <div class="cf ph2-ns">
+            <div class="fl w-100 w-50-ns pa2">
+                <div class="outline bg-white pa4">
+                    <h3 class="f3 ttu tc">Who are we?</h3>
+                    <p class="f5 lh-copy measure-wide">
+                        Wilmington Food Swap is a community of local foodies who share a passion for homemade, homegrown, or foraged foods.
+                    </p>
+                    <p class="f5 lh-copy measure-wide">
+                        Starting Spring 2019, we will meet quarterly to swap and sample each others kitchen creations. While this event is open to
+                        anyone, registration in advance is required to attend.
+                    </p>
+                    <p class="f5 lh-copy measure-wide">
+                        For information about how you can help, see our
+                        <a href="#">Support Us</a> page.
+                    </p>
+                </div>
+            </div>
+            <div class="fl w-100 w-50-ns pa2">
+                <div class="outline bg-white pa4">
+
+                </div>
+            </div>
         </div>
     </section>
+    <section class="mw9 center ph3-ns">
+        <div class="cf ph2-ns">
+            <div class="fl w-100 w-50-ns pa2">
+                <div class="outline bg-white pa4">
+
+                </div>
+            </div>
+            <div class="fl w-100 w-50-ns pa2">
+                <div class="outline bg-white pa4">
+                    <h3 class="f3 ttu tc">What is a food swap?</h3>
+                    <p class="f5 lh-copy measure-wide">
+                        A food swap is a quarterly event where you and fellow foodies meet to exchange and share their homemade, homegrown, or foraged
+                        foods with each other. Food swaps are a great way to change up the homemade and homegrown foods in
+                        your pantry, while getting to meet local foodies like yourself in the process.
+                    </p>
+                    <p class="f5 lh-copy measure-wide">
+                        Take a minute and review our
+                        <a href="#">Tips For Successful Swapping</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="mw9 center ph3-ns">
+        <div class="cf ph2-ns">
+            <div class="fl w-100 w-50-ns pa2">
+                <div class="outline bg-white pa4">
+                    <h3 class="f3 ttu tc">What kinds of food should I bring?</h3>
+                    <p class="f6 lh-copy measure">
+                        In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from your garden. Jams, jellies
+                        and marmalade are frequently swapped at these events. Get creative with pasta, granola, kombucha,
+                        or condiments. Candies and cookies are great as well, but be mindful of portion size. Someone who
+                        made a pint of jam probably would not want to make a swap for just one or two cookies. Whatever you
+                        decide to bring, make sure that it’s packaged in bags or jars and properly labeled.
+                    </p>
+                    <p class="f6 lh-copy measure">
+                        It's recommended you bring five to ten items you wish to swap, as well as samples or a potluck dish to share with the group.
+                    </p>
+                </div>
+            </div>
+            <div class="fl w-100 w-50-ns pa2">
+                <div class="outline bg-white pa4">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 </body>
 
