Add margins. Add pictures. Fix about section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="link dim dark-gray f6 f5-l dib" href="#" title="Contact">Contact</a>
         </div>
     </nav>
-    <section class="bg-gold sans-serif">
+    <section class="bg-gold sans-serif mb5">
         <div class="mw9 center pa4 pt5-ns ph7-l">
             <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
                 <span class="ttu bg-black-90 lh-copy white pa1 tracked-tight">
@@ -33,7 +33,7 @@
             <h5 class="f6 ttu tracked black-80">Wilmington, DE, USA</h5>
         </div>
     </section>
-    <div class="pa4 ph7-l georgia mw9-l center">
+    <div class="pa4 ph7-l georgia mw9-l center mb5">
         <h2 class="ttu f3">Welcome Swappers</h2>
         <p class="f5 f3-ns lh-copy measure georgia">
             Bring your homemade or homegrown items for a barter style swap! Meet fellow foodies, bakers, gardeners, farmers and local
@@ -41,10 +41,10 @@
         </p>
     </div>
 
-    <section class="mw9 center ph3-ns">
+    <section class="mw9 center ph3-ns mb5">
         <div class="cf ph2-ns">
             <div class="fl w-100 w-50-ns pa2">
-                <div class="outline bg-white pa4">
+                <div class="bg-white pa4">
                     <h3 class="f3 ttu tc">Who are we?</h3>
                     <p class="f5 lh-copy measure-wide">
                         Wilmington Food Swap is a community of local foodies who share a passion for homemade, homegrown, or foraged foods.
@@ -60,21 +60,25 @@
                 </div>
             </div>
             <div class="fl w-100 w-50-ns pa2">
-                <div class="outline bg-white pa4">
-
+                <div class="bg-white pa4">
+                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns">
+                        <img src="assets/img/bg-1.jpeg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="mw9 center ph3-ns">
+    <section class="mw9 center ph3-ns  mb5">
         <div class="cf ph2-ns">
             <div class="fl w-100 w-50-ns pa2">
-                <div class="outline bg-white pa4">
-
+                <div class="bg-white pa4">
+                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns">
+                        <img src="assets/img/bg-2.jpeg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+                    </div>
                 </div>
             </div>
             <div class="fl w-100 w-50-ns pa2">
-                <div class="outline bg-white pa4">
+                <div class="bg-white pa4">
                     <h3 class="f3 ttu tc">What is a food swap?</h3>
                     <p class="f5 lh-copy measure-wide">
                         A food swap is a quarterly event where you and fellow foodies meet to exchange and share their homemade, homegrown, or foraged
@@ -92,7 +96,7 @@
     <section class="mw9 center ph3-ns">
         <div class="cf ph2-ns">
             <div class="fl w-100 w-50-ns pa2">
-                <div class="outline bg-white pa4">
+                <div class="bg-white pa4">
                     <h3 class="f3 ttu tc">What kinds of food should I bring?</h3>
                     <p class="f6 lh-copy measure">
                         In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from your garden. Jams, jellies
@@ -107,8 +111,10 @@
                 </div>
             </div>
             <div class="fl w-100 w-50-ns pa2">
-                <div class="outline bg-white pa4">
-
+                <div class="bg-white pa4">
+                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns">
+                        <img src="assets/img/bg-3.jpeg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+                    </div>
                 </div>
             </div>
         </div>
