--- a/index.html
+++ b/index.html
@@ -134,17 +134,15 @@
                         <span class="normal black-60">(optional)</span>
                     </label>
                     <textarea id="comment" name="comment" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2 mb2" aria-describedby="comment-desc"></textarea>
-                    <!-- <small id="comment-desc" class="f6 black-60">WilmingtonFoodSwap@gmail.com
-                        <a href="#" class="link underline black-80 hover-blue">link to more info.</a>
-                    </small> -->
+                    <small id="comment-desc" class="f6 black-60">WilmingtonFoodSwap@gmail.com
+                        <!-- <a href="#" class="link underline black-80 hover-blue">link to more info.</a> -->
+                    </small>
                 </div>
             </fieldset>
             <div class="mt3 mb3">
                 <input class="b ph3 pv2 input-reset ba b--black bg-white grow pointer f6" type="submit" value="Submit">
             </div>
-            <small id="comment-desc" class="f6 black-60">WilmingtonFoodSwap@gmail.com
-                <!-- <a href="#" class="link underline black-80 hover-blue">link to more info.</a> -->
-            </small>
+            <small id="comment-desc" class="f6 black-60">WilmingtonFoodSwap@gmail.com</small>
         </form>
     </section>
 
