--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
         </div>
     </section>
     <section class="pa4 black-80 flex justify-center bg-gold">
-        <form action="sign-up_submit" method="get" accept-charset="utf-8">
+        <form action="sign-up_submit" method="get" accept-charset="utf-8" netlify>
             <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
                 <legend class="ph0 mh0 fw6 clip">Sign Up</legend>
                 <div class="mt3">
-                    <label class="db fw4 lh-copy f6" for="password">Name</label>
-                    <input class="pa2 input-reset ba b--black-20" type="text" name="password" id="password">
+                    <label class="db fw4 lh-copy f6" for="name">Name</label>
+                    <input class="pa2 input-reset ba b--black-20" type="text" name="name" id="name">
                 </div>
                 <div class="mt3 mb3">
                     <label class="db fw4 lh-copy f6" for="email-address">Email address</label>
