Remove get from form

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
     </section>
     <section class="pa4 black-80 flex justify-center bg-gold">
-        <form action="sign-up_submit" method="get" accept-charset="utf-8" netlify>
+        <form action="sign-up_submit" accept-charset="utf-8" netlify>
             <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
                 <legend class="ph0 mh0 fw6 clip">Sign Up</legend>
                 <div class="mt3">
