--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                             <h2 class="f2">Some words</h2>
                             <p class="measure">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis illo sint dolor, blanditiis quasi optio!</p>
                             <p class="measure">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="measure">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta inventore explicabo maiores harum! Magnam, cupiditate. Delectus temporibus obcaecati maiores, earum repellat vitae debitis quas nobis?</p>
+                            <p class="measure">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta inventore explicabo maiores harum! Magnam, cupiditate. Delectus
+                                temporibus obcaecati maiores, earum repellat vitae debitis quas nobis?</p>
                     </div>
                 </div>
 
@@ -179,7 +180,7 @@
         document.querySelector(".juicy").appendChild(script);
         // Originally I tried removing the logo by detecting script load
         // but for some reason that didn't work
-        // The script naturally evolved into this convuluted mess
+        // The script naturally evolved into this convoluted mess
         script.onload = function() {
             console.log("script loaded")
             function pause() {
