Replace mock text with copy in form section

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             <div class="cf ph2-ns">
                 <div class="fl w-100 w-50-ns pa2">
                     <div class="pv4">
-                            <h2 class="f2">Some words</h2>
-                            <p class="measure">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis illo sint dolor, blanditiis quasi optio!</p>
-                            <p class="measure">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="measure">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta inventore explicabo maiores harum! Magnam, cupiditate. Delectus
-                                temporibus obcaecati maiores, earum repellat vitae debitis quas nobis?</p>
+                            <h2 class="f2">Contact Us</h2>
+                            <p class="measure">Hi there! You can use this contact form to reach out with any questions you may have about who we are, what a food swap is, ideas of what to bring to swap, or anything else.</p>
+                            <p class="measure">Additionally, if you have a venue you’d be willing to let us have a meet at, or want to know if we need any help with supplies, feel free to reach out also.</p>
+                            <p class="measure">You can also use our email address below if you prefer.</p>
+                            <p class="measure">We look forward to hearing from you!</p>
                     </div>
                 </div>
 
