--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
             <!-- <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
             <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a> -->
+            <a class="link dim dark-gray f6 f5-l dib" href="guide.html" title="Contact">Swap Guide</a>
             <a class="link dim dark-gray f6 f5-l dib" href="#contact" title="Contact">Contact</a>
         </div>
     </nav>
