Add support us page

--- a/guide.html
+++ b/guide.html
@@ -16,6 +16,7 @@
         <!-- <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
         <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a> -->
         <a class="link dim dark-gray f6 f5-l dib" href="guide.html" title="Contact">Swap Guide</a>
+        <a class="link dim dark-gray f6 f5-l dib" href="support.html" title="Contact">Support us</a>
         <a class="link dim dark-gray f6 f5-l dib" href="index.html#contact" title="Contact">Contact</a>
     </div>
 </nav>
@@ -47,7 +48,7 @@
                 <ul>
                     <li>You will need one sheet for each type of item you have. E.g., if you have 3 jars each of 2
                         kinds of jam, you need 2 sheets</li>
-                    <li>Swap sheets are available on our Google Drive by <a href="https://docs.google.com/document/d/1_X-u5ueq6k8e8clwMd6LpP5YVituT-ZVc16vYyhEpb0/edit?usp=sharing">cliking here</a></li>
+                    <li>Swap sheets are available on our Google Drive by <a href="https://docs.google.com/document/d/1_X-u5ueq6k8e8clwMd6LpP5YVituT-ZVc16vYyhEpb0/edit?usp=sharing">clicking here</a></li>
                     <li>Be sure to include dietary notes like GF, vegan, or contains nuts.</li>
                 </ul>
             </li>
