--- a/support.html
+++ b/support.html
@@ -26,10 +26,10 @@
 
     <article class="helvetica pb3">
         <header class="vh-100 bg-light-pink dt w-100">
-            <div style="background:url(http://mrmrs.github.io/photos/display.jpg) no-repeat center right;background-size: cover;"
+            <div style="background:url(assets/img/header.jpeg) no-repeat center right;background-size: cover;"
                 class="dtc v-mid cover ph3 ph4-m ph5-l">
-                <h1 class="f2 f-subheadline-l measure lh-title fw9">Support us</h1>
-                <h2 class="f6 fw6 black">Your Generosity Makes This Possible</h2>
+                <h1 class="f2 f-subheadline-l measure lh-title fw9 near-white">Support us</h1>
+                <h2 class="f6 fw6 black near-white">Your Generosity Makes This Possible</h2>
             </div>
         </header>
         <style>
@@ -49,7 +49,7 @@
             <div class="f5 f3-m lh-copy">
                 <div class="cf dt-l w-100 bt b--black-10 pv4">
                     <div class="dtc-l v-mid mw6 pr3-l">
-                        <img class="w-100" src="http://mrmrs.github.io/photos/009.jpg" alt="" />
+                        <img class="w-100" src="assets/img/venue.jpeg" alt="" />
                     </div>
                     <div class="dtc-l v-mid f6 f5-m f3-l measure-l">
                         <p class="measure pv4-l center">
